--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Simon</title>
+  <link rel="icon" href="simon.ico">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -34,7 +38,18 @@
     </div>
 
   </div>
-
+  <footer>
+    Made with ❤️ in Ecuador.
+    <p class="author">Created by Daniel Correa</p>
+      <ul class="author-links">
+       <li class="list-link"><a target="_blanck" class="author-link" href="https://github.com/danielcr0995"><i class="icon fab fa-github fa-2x"></i>Github</a></li>
+       <li class="list-link"><a target="_blanck" class="author-link" href="www.linkedin.com/in/daniel-correa0995
+        "> <i class="icon fab fa-linkedin fa-2x"></i>LinkedIn </a></li>
+      </ul>
+  <script src="https://kit.fontawesome.com/8f2dde67d6.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="simon.js"></script>
+  
 
 </body>
 
